# jingbian_ws

./: 269.json  file (24).json  file (24).json:Zone.Identifier
devel/: .catkin  .rosinstall
devel/include/uav_msgs/: AngleRateThrottle.h  DesiredStates.h  Takeoff.h  TakeoffRequest.h  TakeoffResponse.h
devel/lib/pkgconfig/: plan_and_control.pc  tracking_controller.pc  trajectory_generator.pc  uav_msgs.pc  yolov8_ros.pc  yolov8_ros_msgs.pc
devel/lib/plan_and_control/: trajectory_publisher_node  trajectory_replan_node  trajectory_tracking_node
devel/lib/python3/dist-packages/uav_msgs/msg/: _AngleRateThrottle.py  _DesiredStates.py  __init__.py
devel/lib/python3/dist-packages/uav_msgs/srv/: _Takeoff.py  __init__.py
devel/share/common-lisp/ros/uav_msgs/msg/: AngleRateThrottle.lisp  DesiredStates.lisp  _package.lisp  _package_AngleRateThrottle.lisp  _package_DesiredStates.lisp  uav_msgs-msg.asd
devel/share/common-lisp/ros/uav_msgs/srv/: Takeoff.lisp  _package.lisp  _package_Takeoff.lisp  uav_msgs-srv.asd
devel/share/gennodejs/ros/uav_msgs/msg/: AngleRateThrottle.js  DesiredStates.js  _index.js
devel/share/gennodejs/ros/uav_msgs/srv/: Takeoff.js  _index.js
devel/share/plan_and_control/cmake/: plan_and_controlConfig.cmake
devel/share/roseus/ros/uav_msgs/: manifest.l
devel/share/roseus/ros/uav_msgs/msg/: AngleRateThrottle.l  DesiredStates.l
devel/share/roseus/ros/uav_msgs/srv/: Takeoff.l
devel/share/roseus/ros/yolov8_ros_msgs/: manifest.l
devel/share/tracking_controller/cmake/: tracking_controllerConfig.cmake
devel/share/trajectory_generator/cmake/: trajectory_generatorConfig.cmake
devel/share/uav_msgs/cmake/: uav_msgs-msg-paths.cmake  uav_msgsConfig.cmake
devel/share/yolov8_ros/cmake/: yolov8_rosConfig.cmake
devel/share/yolov8_ros_msgs/cmake/: yolov8_ros_msgs-msg-extras.cmake  yolov8_ros_msgs-msg-paths.cmake  yolov8_ros_msgsConfig.cmake
src/Robomaster-uav-competition/plan_and_control/: CMakeLists.txt
src/Robomaster-uav-competition/plan_and_control/include/plan_and_control/: trajectory_publisher_node.h  trajectory_replan_node.h
src/Robomaster-uav-competition/plan_and_control/launch/: trajectory_tracking.launch
src/Robomaster-uav-competition/plan_and_control/src/: trajectory_publisher_node.cpp  trajectory_replan_node.cpp
src/Robomaster-uav-competition/tracking_controller/: CMakeLists.txt
src/Robomaster-uav-competition/trajectory_generator/: CMakeLists.txt
